force-app/main/default/objects/PM_User_Matrix__c/PM_User_Matrix__c.object-meta.xml
<CustomObject>
    <label>PM User Matrix</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM User Matrix</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>