force-app/main/default/objects/PM_User_Matrix__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PM User Matrix</relationshipLabel>
    <relationshipName>PM_User_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>