force-app/main/default/objects/PM_User_Matrix__c/fields/Circle1__c.field-meta.xml
<CustomField>
    <fullName>Circle1__c</fullName>
    <label>Circle1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Circle</valueSetName>
    </valueSet>
</CustomField>