force-app/main/default/objects/PM_User_Matrix__c/fields/CPH__c.field-meta.xml
<CustomField>
    <fullName>CPH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPH</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PM_User_Matrix3</relationshipName>
    <type>Lookup</type>
</CustomField>