force-app/main/default/objects/PM_User_Matrix__c/fields/PM__c.field-meta.xml
<CustomField>
    <fullName>PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PM User</description>
    <label>PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PM_User_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>