force-app/main/default/objects/PM_User_Matrix__c/fields/TL__c.field-meta.xml
<CustomField>
    <fullName>TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PM&apos;s TL</description>
    <label>TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PM_User_Matrix1</relationshipName>
    <type>Lookup</type>
</CustomField>