force-app/main/default/objects/PM_User_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Circle__c</columns>
    <columns>Business_Account__c</columns>
    <columns>PM__c</columns>
    <columns>TL__c</columns>
    <columns>CPH__c</columns>
    <columns>CCE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>