force-app/main/default/objects/PM_User_Matrix__c/listViews/PMUserMatrix.listView-meta.xml
<ListView>
    <fullName>PMUserMatrix</fullName>
    <columns>NAME</columns>
    <columns>Circle__c</columns>
    <columns>Business_Account__c</columns>
    <columns>PM__c</columns>
    <columns>TL__c</columns>
    <columns>CPH__c</columns>
    <filterScope>Mine</filterScope>
    <label>PM User Matrix</label>
</ListView>